--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@ui5/webcomponents-fiori": "^1.0.0-rc.8",
     "@ui5/webcomponents-icons": "^1.0.0-rc.8",
     "@ui5/webcomponents-react": "^0.10.6",
+    "@ui5/webcomponents-react-base": "^0.10.1",
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
